# vdbmat-utils

./: .gitignore  README.md  pyproject.toml
docs/: designlab.md  determinism.md  image-stacks.md  morphing.md  optical-mappings.md  pipelines.md  previews.md  primitive-arrays.md  print-slices.md  procedural.md  stats.md  volume-ops.md  voxelization.md
docs/adr/: 0001-vdbmat-dependency-pinning.md  0002-canonical-naming.md  0003-contract-compatibility-range.md  0004-stl-only-mesh-loading.md  0005-winding-number-voxelization-port.md  0006-image-stack-migration.md  0007-label-safety-architecture.md  0008-per-label-sdf-morphing.md  0009-volume-op-and-pipeline-contracts.md  0010-procedural-determinism.md  0011-formation-model.md  0012-metrics-and-mapping.md
examples/designlab/: designlab_app.py  designlab_configs.py  designlab_jobs.py  designlab_pipeline.py  designlab_registry.py
examples/formation_generation/: marble-like.formation.json  tiny-sweep.sweep.json
examples/phase3/: granite-like.formation.json
src/vdbmat_utils/: __init__.py  fixtures.py
tests/contract/: test_determinism.py  test_formation_contract.py  test_golden_fixtures.py  test_image_stack_contract.py  test_mesh_contract.py  test_phase2_contract.py  test_phase3_contract.py  test_primitive_array_contract.py  test_print_slices_contract.py  test_print_slices_roundtrip.py
tests/integration/: test_convert_image_stack.py  test_designlab_pipeline.py  test_formation_workflows.py  test_import_voxels.py  test_morph_pipeline_workflows.py  test_vdbmat_cli.py  test_voxelize_mesh.py
tests/unit/: conftest.py  (+36 more)
(+58 files in other folders)
