[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[project]
name = "vdbmat-utils"
version = "0.1.0"
description = "Generators and converters producing material-labeled voxel inputs for vdbmat"
readme = "README.md"
requires-python = ">=3.11"
license = "CC0-1.0"
dependencies = [
    "numpy>=1.26",
    "vdbmat",
]

[project.optional-dependencies]
mesh = []
image = ["pillow>=10"]
vdb = []
preview = []

[project.scripts]
vdbmat-utils = "vdbmat_utils.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8.0",
    "ruff>=0.11",
]
designlab = [
    "viser>=0.2",
]

[tool.uv.sources]
vdbmat = { path = "../vdbmat", editable = true }

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
markers = [
    "integration: tests that invoke the pinned vdbmat CLI end to end",
]

[tool.mypy]
python_version = "3.11"
strict = true

# vdbmat is fully annotated but does not ship a py.typed marker yet; analyze
# its sources anyway instead of ignoring the imports.
[[tool.mypy.overrides]]
module = "vdbmat.*"
follow_untyped_imports = true

# Pillow is an optional extra ("image"); the lazy import must typecheck even
# in environments where it is not installed.
[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
